<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.agora.rtcwithbyte.view.ButtonView
        android:id="@+id/bv_face"
        app:src="@drawable/ic_face106"
        app:title="@string/face_106_title"
        app:desc="@string/face_106_desc"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <io.agora.rtcwithbyte.view.ButtonView
        android:id="@+id/bv_280_face"
        app:src="@drawable/ic_face280"
        app:title="@string/face_280_title"
        app:desc="@string/face_280_desc"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <io.agora.rtcwithbyte.view.ButtonView
        android:id="@+id/bv_attr_face"
        app:src="@drawable/ic_face_attr"
        app:title="@string/face_attr_title"
        app:desc="@string/face_attr_desc"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>