<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="@dimen/hand_info_height"
    android:background="@color/tipboard_bg">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gesture"
            style="@style/faceInfoTextStyle"
            />
        <TextView
            android:id="@+id/tv_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/faceInfoTextStyle"
            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorChecked"></View>
    <TextView
        android:id="@+id/tv_punching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punching"
        style="@style/faceInfoTextStyle"
        />
    <TextView
        android:id="@+id/tv_clapping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applaud"
        style="@style/faceInfoTextStyle"
        />


</LinearLayout>