<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorBg"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_verify"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/current_face"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:minWidth="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_total_verify_face_info"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_cur_face_face_info"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:padding="5dp"
        android:background="@color/colorBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/yaw"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/roll"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/pitch"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:minWidth="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_yaw_face_info"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_roll_face_info"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_pitch_face_info"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_blink_eye_face_info"
            android:text="@string/closing_eye"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_open_mouth_face_info"
            android:text="@string/open_mouth"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_shake_head_face_info"
            android:text="@string/shake_head"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nod_face_info"
            android:text="@string/nod"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_raise_eyebrow_face_info"
            android:text="@string/raise_eyebrow"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_pout_face_info"
            android:text="@string/pout"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorBg"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_attr_face_info"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:visibility="gone"
        android:background="@color/colorBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/age"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/gender"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/race"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/beauty"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/happiness"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/expression"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:minWidth="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_age_face_info"
                android:text="@string/age"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_gender_face_info"
                android:text="@string/gender"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_race_face_info"
                android:text="@string/race"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_beauty_face_info"
                android:text="@string/beauty"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_happiness_face_info"
                android:text="@string/happiness"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_expression"
                android:text="@string/expression"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>